--- a/modele1.html
+++ b/modele1.html
@@ -31,7 +31,8 @@ legend {
 	font-size: 1rem;
 }
 label, input, textarea {
-	margin: 10px 5px;
+	margin: 10px 3px;
+	padding: 3px 2px;
 }
 input, select, textarea {
 	border: 1px solid #cccccc !important;
