--- a/modele1.html
+++ b/modele1.html
@@ -2,8 +2,70 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8">
+<script src="https://use.fontawesome.com/b0f2256f6e.js"></script>
 <title>Titre de la page</title>
 <style type="text/css">
+* {
+	margin: 0;
+	padding: 0;
+}
+body {
+	background-color: #EEE;
+	min-width: 1000px;
+}
+#menu {
+	position: fixed;
+	top: 100px;
+	left: -190px;
+	transition: all 1s ease;
+}
+#menu:hover {
+	left: 0;
+	transition: all 1s ease;
+}
+#menu ul {
+	list-style-type: none;
+}
+#menu ul li a {
+	display: block;
+	width: 220px;
+	height: 50px;
+	padding: 0 10px;
+	font-size: 1rem;
+	line-height: 50px;
+	color: #FFF;
+	text-decoration: none;
+	background-color: #8ab928;
+	text-align: right;
+	font-family: arial, sans-serif;
+	transition: all 0.3s ease;
+}
+#menu ul li a i {
+	font-size: 30px;
+	margin: 10px 0 0 20px;
+	float: right;
+}
+#menu ul li:hover a {
+	background-color: #000;
+	border-left: 15px solid #000;
+	transition: all 0.3s ease;
+}
+#save {
+	position: fixed;
+	bottom: 30px;
+	right: 20px;
+}
+#save button {
+	color: #8ab928;
+	opacity: 0.5;
+	transition: all 1s ease;
+	border: 0;
+	cursor: pointer;
+}
+#save button:hover {
+	opacity: 1;
+	transition: all 1s ease;
+}
 #formulaire {
 	width: 900px;
 	margin: 0 auto;
@@ -18,16 +80,18 @@ div.row {
 fieldset {
 	margin: 20px 0;
 	border: 1px solid #8ab928;
+	background-color: #FFF;
 }
 #infos {
-	background: url('_img/infos.png') 90% 90% no-repeat;
+	background: url('_img/infos.png') 90% 90% no-repeat #FFF;
 }
 #prestation {
-	background: url('_img/prestation.jpg') 90% 90% no-repeat;
+	background: url('_img/prestation.jpg') 90% 90% no-repeat #FFF;
 }
 legend {
 	border: 1px solid #8ab928;
 	padding: 5px 10px;
+	margin-left: 20px;
 	background-color: #8ab928;
 	color: #FFF;
 	font-family: arial, sans-serif;
@@ -40,6 +104,9 @@ label, input, textarea, select {
 input, select, textarea {
 	border: 1px solid #cccccc !important;
 }
+input:focus {
+	border: 1px solid #8ab928 !important;
+}
 #prestation label {
 	display: inline-block;
 	width: 70px;
@@ -51,6 +118,19 @@ input, select, textarea {
 </head>
 
 <body>
+<nav id="menu">
+	<ul>
+		<li><a href="#">Accueil<i class="fa fa-home" aria-hidden="true"></i></a></li>
+		<li><a href="#">Rechercher une fiche<i class="fa fa-search" aria-hidden="true"></i></a></li>
+		<li><a href="#">Modifier la fiche<i class="fa fa-pencil-square-o" aria-hidden="true"></i></a></li>
+		<li><a href="#">Créer une fiche<i class="fa fa-plus" aria-hidden="true"></i></a></li>
+		<li><a href="#">Changer de modèle<i class="fa fa-file-image-o" aria-hidden="true"></i></a></li>
+		<li><a href="#">Déconnexion<i class="fa fa-power-off" aria-hidden="true"></i></a></li>
+	</ul>
+</nav>
+<div id="save">
+	<button title="Enregistrer la fiche"><i class="fa fa-check-circle fa-5x" aria-hidden="true"></i></button>
+</div>
 <div id="formulaire">
 	<form>
 		<div class="row">
@@ -168,8 +248,7 @@ input, select, textarea {
 					<option>Exonération (service RMI CMU)</option>
 					<option>Exonération (séjour ANNULE)</option>
 					<option>A payer</option>
-				</select><br>
-				
+				</select><input type="text" name="??" style="display: inline-block; width: 50px;">€ x <input type="text" name="??" style="display: inline-block; width: 50px;"> = <input type="text" name="??" style="display: inline-block; width: 70px;"><br>
 			</fieldset>
 		</div>
 		<div class="row">
