--- a/modele1.html
+++ b/modele1.html
@@ -3,118 +3,8 @@
 <head>
 <meta charset="utf-8">
 <script src="https://use.fontawesome.com/b0f2256f6e.js"></script>
+<link href="_css/style.css" type="text/css" rel="stylesheet" media="all">
 <title>Titre de la page</title>
-<style type="text/css">
-* {
-	margin: 0;
-	padding: 0;
-}
-body {
-	background-color: #EEE;
-	min-width: 1000px;
-}
-#menu {
-	position: fixed;
-	top: 100px;
-	left: -190px;
-	transition: all 1s ease;
-}
-#menu:hover {
-	left: 0;
-	transition: all 1s ease;
-}
-#menu ul {
-	list-style-type: none;
-}
-#menu ul li a {
-	display: block;
-	width: 220px;
-	height: 50px;
-	padding: 0 10px;
-	font-size: 1rem;
-	line-height: 50px;
-	color: #FFF;
-	text-decoration: none;
-	background-color: #8ab928;
-	text-align: right;
-	font-family: arial, sans-serif;
-	transition: all 0.3s ease;
-}
-#menu ul li a i {
-	font-size: 30px;
-	margin: 10px 0 0 20px;
-	float: right;
-}
-#menu ul li:hover a {
-	background-color: #000;
-	border-left: 15px solid #000;
-	transition: all 0.3s ease;
-}
-#save {
-	position: fixed;
-	bottom: 30px;
-	right: 20px;
-}
-#save button {
-	color: #8ab928;
-	opacity: 0.5;
-	transition: all 1s ease;
-	border: 0;
-	cursor: pointer;
-}
-#save button:hover {
-	opacity: 1;
-	transition: all 1s ease;
-}
-#formulaire {
-	width: 900px;
-	margin: 0 auto;
-}
-label {
-	font-family: arial, sans-serif;
-	font-size: 0.8rem;
-}
-div.row {
-	width: 100%;
-}
-fieldset {
-	margin: 20px 0;
-	border: 1px solid #8ab928;
-	background-color: #FFF;
-}
-#infos {
-	background: url('_img/infos.png') 90% 90% no-repeat #FFF;
-}
-#prestation {
-	background: url('_img/prestation.jpg') 90% 90% no-repeat #FFF;
-}
-legend {
-	border: 1px solid #8ab928;
-	padding: 5px 10px;
-	margin-left: 20px;
-	background-color: #8ab928;
-	color: #FFF;
-	font-family: arial, sans-serif;
-	font-size: 1rem;
-}
-label, input, textarea, select {
-	margin: 10px 3px;
-	padding: 3px 2px;
-}
-input, select, textarea {
-	border: 1px solid #cccccc !important;
-}
-input:focus {
-	border: 1px solid #8ab928 !important;
-}
-#prestation label {
-	display: inline-block;
-	width: 70px;
-}
-#prestation select {
-	width: 300px;
-}
-</style>
 </head>
 
 <body>
